Update spring boot version and dockerfile setup